# VOID

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_launch.sh
src/: Application.cpp  CMakeLists.txt
src/Bindings/: CMakeLists.txt  CoreModule.cpp  Module.cpp  UiModule.cpp
src/VoidApplication/Core/: ArgumentParser.cpp  ArgumentParser.h
src/VoidApplication/Engine/: Engine.cpp  Engine.h  VoidStyle.cpp  VoidStyle.h
src/VoidAudio/: AudioStream.cpp  AudioStream.h  CMakeLists.txt
src/VoidAudio/Core/: AudioStream.cpp  AudioStream.h  Decoder.cpp  Decoder.h  Stream.cpp  Stream.h
src/VoidAudio/Platform/: LinuxStream.cpp  LinuxStream.h
src/VoidAudio/Stream/: Linux.cpp  Linux.h  Mac.cpp  Mac.h  Win.cpp  Win.h
src/VoidCore/: AudioStream.cpp  AudioStream.h  CMakeLists.txt  ColorProcessor.cpp  ColorProcessor.h  FormatForge.cpp  Identity.h  ImageBuffer.cpp  ImageBuffer.h  ImageData.cpp  ImageData.h  Logging.cpp  Logging.h  Media.cpp  Media.h  MediaFilesystem.cpp  MediaFilesystem.h  Profiler.h  PyExecutor.cpp  PyExecutor.h  Serialization.h  Timecode.cpp  Timecode.h  Timekeeper.cpp  Timekeeper.h  VoidTools.cpp  VoidTools.h
src/VoidCore/Media/: Filesystem.cpp  Filesystem.h  Frame.cpp  Frame.h  Media.cpp  Media.h  Renderer.cpp  Renderer.h  View.cpp  View.h
src/VoidCore/Operators/: Brighter.cpp  Brighter.h  Flipper.cpp  Flipper.h  Grader.cpp  Grader.h  Inverter.cpp  Inverter.h  Operator.cpp  Param.cpp  Registration.h
src/VoidCore/Plugins/: Loader.cpp  Loader.h
src/VoidCore/Processors/: ImageProcessor.cpp  ImageProcessor.h
src/VoidCore/Readers/: FFmpegReader.cpp  FFmpegReader.h  OIIOReader.cpp  OIIOReader.h  OpenEXRReader.cpp  OpenEXRReader.h  Registration.h  TurboJpegReader.cpp  TurboJpegReader.h
src/VoidCore/Writers/: FFmpegWriter.cpp  FFmpegWriter.h  OIIOWriter.cpp  OIIOWriter.h  Registration.h
src/VoidObjects/: Buffer.cpp  Buffer.h  CMakeLists.txt  VoidObject.h
src/VoidObjects/Commands/: MediaCommands.h
src/VoidObjects/Core/: Task.cpp  Task.h  TaskLog.cpp  TaskLog.h  Threads.cpp  Threads.h  Timekeeper.cpp  Timekeeper.h
src/VoidObjects/Effects/: Bridge.cpp  Bridge.h  Effects.cpp  Effects.h
src/VoidObjects/Media/: MediaBridge.cpp  MediaBridge.h  MediaClip.cpp  MediaClip.h  Tag.cpp  Tag.h
src/VoidObjects/Models/: MediaModel.cpp  MediaModel.h  PlaylistModel.cpp  PlaylistModel.h  ProjectModel.cpp  ProjectModel.h  TagMetadataModel.cpp  TagMetadataModel.h  TagModel.cpp  TagModel.h
src/VoidObjects/Node/: Data.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Reader.cpp  Reader.h
src/VoidObjects/Playlist/: Playlist.cpp  Playlist.h
src/VoidObjects/Project/: Project.cpp  Project.h
src/VoidObjects/Sequence/: Sequence.cpp  Sequence.h  SequenceView.cpp  SequenceView.h  Track.cpp  Track.h  TrackItem.cpp  TrackItem.h  TrackView.cpp  TrackView.h
src/VoidRenderer/: AnnotationRenderer.cpp  AnnotationRenderer.h  CMakeLists.txt  ImageComparisonRenderLayer.h  ImageRenderLayer.h  RenderTypes.cpp  RenderTypes.h  Renderer.cpp  Renderer.h  RendererStatus.cpp  RendererStatus.h  VoidGL.cpp  VoidGL.h  VoidRenderer.cpp  VoidRenderer.h
src/VoidRenderer/Core/: Error.cpp  Error.h  FontAtlas.cpp  FontAtlas.h  FontEngine.cpp  FontEngine.h  RenderTypes.cpp  RenderTypes.h
src/VoidRenderer/Gears/: ImageComparisonRenderGear.cpp  ImageComparisonRenderGear.h  ImageRenderGear.cpp  ImageRenderGear.h  RenderGear.cpp  RenderGear.h  StrokeRenderGear.cpp  StrokeRenderGear.h  SwiperRenderGear.cpp  SwiperRenderGear.h  TextRenderGear.cpp  TextRenderGear.h
src/VoidRenderer/Layers/: AnnotationRenderLayer.cpp  AnnotationRenderLayer.h  GridRenderLayer.cpp  GridRenderLayer.h  ImageComparisonRenderLayer.cpp  ImageComparisonRenderLayer.h  ImageRenderLayer.cpp  ImageRenderLayer.h  StrokeRenderLayer.cpp  StrokeRenderLayer.h  SwipeRenderLayer.cpp  SwipeRenderLayer.h  TextRenderLayer.cpp  TextRenderLayer.h
src/VoidRenderer/Programs/: GridShaderProgram.cpp  GridShaderProgram.h  ImageComparisonShaderProgram.cpp  ImageComparisonShaderProgram.h  ImageShaderProgram.cpp  ImageShaderProgram.h  ShaderProgram.h  StrokeShaderProgram.cpp  StrokeShaderProgram.h  SwiperShaderProgram.cpp  SwiperShaderProgram.h  TextShaderProgram.cpp  TextShaderProgram.h  TextboxShaderProgram.cpp  TextboxShaderProgram.h
src/VoidUi/: About.cpp  About.h  AnnotationController.cpp  AnnotationController.h  BaseWindow.cpp  BaseWindow.h  Browser.cpp  Browser.h  BufferSwitch.cpp  BufferSwitch.h  CMakeLists.txt  ControlBar.cpp  ControlBar.h  ControlScroller.cpp  ControlScroller.h  Descriptors.h  Docker.cpp  Events.h  FramelessWindow.cpp  FramelessWindow.h  MediaBridge.cpp  MediaBridge.h  MediaClip.cpp  MediaClip.h  MediaItem.cpp  MediaItem.h  MediaLister.cpp  MediaLister.h  MediaModel.h  MediaSearchBar.cpp  MediaSearchBar.h  PlayerWidget.cpp  PlayerWidget.h  PlayerWindow.cpp  PlayerWindow.h  Sequence.cpp  Sequence.h  Timeline.cpp  Timeline.h  Timeslider.cpp  (+14 more)
src/VoidUi/BaseWindow/: About.cpp  About.h  BaseWindow.cpp  BaseWindow.h  DockPanel.h  Docker.cpp  Docker.h  MenuSystem.cpp  MenuSystem.h  PlayerWindow.cpp  PlayerWindow.h  StartupWindow.cpp  StartupWindow.h  TitleBar.cpp  TitleBar.h  WorkspaceManager.cpp  WorkspaceManager.h
src/VoidUi/Commands/: EffectCommands.cpp  EffectCommands.h  MediaCommands.cpp  MediaCommands.h  PlaylistCommands.cpp  PlaylistCommands.h  TagCommands.cpp  TagCommands.h  VoidCommand.cpp  VoidCommand.h
src/VoidUi/Dock/: DockManager.cpp  DockManager.h  DockPanel.cpp  DockPanel.h  DockSplitter.cpp  DockSplitter.h  DockWidget.cpp  DockWidget.h  Docker.cpp  Docker.h
src/VoidUi/Editor/: Effects.cpp  Effects.h  ParamEditor.cpp  ParamEditor.h  Properties.cpp  Properties.h  RangedParamEditor.cpp  RangedParamEditor.h
src/VoidUi/Engine/: Bridge.cpp  Bridge.h  Globals.cpp  Globals.h  IconForge.cpp  IconForge.h  IconTypes.h
src/VoidUi/Exporter/: ExportOptions.cpp  ExportOptions.h  Exporter.h  (+3 more)
src/include/: Allocator.h  AudioFormat.h  Colorspace.h  Definition.h  FormatForge.h  FrameRange.h  Image.h  ImageReader.h  Op.h  Operator.h  Param.h  PixBlock.h  PixReader.h  PixWriter.h  QDefinition.h  Row.h  Version.h
(+168 files in other folders)
